<resources>
    <string name="app_name">RentakuCapstone</string>
    <string name="bar_name">Selamat Datang Di Rentaku</string>
    <string name="message_main_page">Selamat Datang Di Rentaku.</string>
    <string name="rentaku">RENTAKU</string>
    <string name="sewa_text">SEWA TRANSPORTASI</string>
    <string name="title">Masukkan email dan password untuk melanjutkan</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa sandi?</string>
    <string name="belum">Belum punya akun? </string>
    <string name="login">Masuk</string>
    <string name="atau">atau</string>
    <string name="google">Masuk dengan Google</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="title_welcome_page">Selamat datang di Rentaku!</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicodingin aja!</string>
    <string name="input_email">Masukan Email Anda</string>
    <string name="input_password">Masukkan Password Anda</string>
    <string name="registrasi">Registrasi disini.</string>
    <string name="kamu_lupa_sandi">Kamu Lupa Password ya…</string>
    <string name="gimana">Masukkin aja email kamu disini terus pencet "Reset Password Saya"</string>
    <string name="yeah">Yeah, motor kamu berhasil dipesan, kamu tinggal konfirmasi ketempat sewa melalui chat diaplikasi ini atau ketuk tombol dibawah</string>
    <string name="reset_password_saya">Reset Password Saya</string>
    <string name="punya_akun">Punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="buat_kata_sandi">Buat Kata Sandi</string>
    <string name="different_password">Password baru kamu harus beda dari yang sebelumnya ya…</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="instruction_email">Silakan cek email kamu untuk lihat instruksi lebih lanjut.</string>
    <string name="minimum_karakter">Minimal 8 Karakter</string>
    <string name="confirm_karakter">Keduanya harus cocok ya</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_fav">Favourite</string>
    <string name="dashboard">INI HALAMAN DASHBOARD</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">This is account fragment</string>
    <string name="title_account">Akun</string>
    <string name="this_is_home_fragment">This is Home Fragment</string>
    <string name="this_is_dashboard_fragment">This is Dashboard Fragment</string>
    <string name="this_is_notifications_fragment">This is Notifications Fragment</string>
    <string name="register">Buat akunmu dan nikmati sewa kendaraan di sekitarmu dengan mudah!</string>
    <string name="hint_nama">Nama kamu</string>
    <string name="hint_email">rentaku@gmail.com</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="gender_hint">Laki-laki/Perempuan</string>
    <string name="telepon">Telepon</string>
    <string name="number_hint">0877428482</string>
    <string name="lanjut">Lanjut</string>
    <string name="lengkapiProfil">Lengkapi profil kamu dulu yuk!</string>
    <string name="profil">Profil</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="noKtp_hint">029103218372819334</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="simpan">Simpan</string>
    <string name="menu_1">Menu 1</string>
    <string name="searchbar_hint">Mau kemana kamu hari ini?</string>
    <string name="wilayah_merk">wilayah, merk kendaraan</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="motor">ZX 250R</string>
    <string name="test_aja_yee">TEST</string>
    <string name="test555555">TEST</string>
    <string name="hello">Hellooo</string>
    <string name="hellosdasd">Hellooodasdsadadasdad</string>
    <string name="hello11">Hell0000000www</string>
    <string name="disekitarmu">Disekitarmu</string>
    <string name="cc_250">250cc</string>
    <string name="harga1">250K/hari</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="nomor_sim">Nomor SIM</string>
    <string name="nomor_paspor">Nomor Paspor</string>
    <string name="agreement">melalui centang check box ini akan digunakan untuk memvalidasi data yang diberikan dan setuju terhadap ketentuan yang ada</string>
    <string name="detail_kendaraan_title">Detail Kendaraan</string>
    <string name="merk">Merk</string>
    <string name="model">Model</string>
    <string name="kategori">Kategori</string>
    <string name="mileage">Mileage</string>
    <string name="tipe_transmisi">Tipe Transmisi</string>
    <string name="jumlah_penumpang">Jumlah Penumpang</string>
    <string name="warna">Warna</string>
    <string name="harga">Harga</string>
    <string name="nama_garasi">Nama Garasi</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="tanggal">Tanggal</string>
    <string name="no_pesanan">No. Pesanan</string>
    <string name="smj00233">SMJ00233</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="sukses">Sukses!!</string>
    <string name="data_kamu_berhasil_disimpan">Data kamu berhasil disimpan</string>
    <string name="kawasaki_zx250r">Kawasaki ZX250R</string>
    <string name="senayan_park">Senayan Park</string>
    <string name="sedang_diantar">Sedang diantar</string>
    <string name="time">12:10</string>
    <string name="price">Rp.250.000</string>
    <string name="pesan_lagi">Pesan Lagi</string>
    <string name="lokasi_pengambilan">Lokasi Pengambilan</string>
    <string name="stasiun_lempuyangan_yogyakarta">Stasiun Lempuyangan, Yogyakarta</string>
    <string name="lokasi_pengembalian">Lokasi Pengembalian</string>
    <string name="durasi_sewa">Durasi Sewa</string>
    <string name="pengambilan">Pengambilan :</string>
    <string name="timeSewa">23 Juni 2021 (15:00)</string>
    <string name="pengembalian">Pengembalian :</string>
    <string name="uzumaki_nagato">Uzumaki Nagato</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="bisa_refund">Bisa Refund</string>
    <string name="tidak_bisa_reschedule">Tidak bisa reschedule</string>
    <string name="data_penyewa">Data Penyewa</string>
    <string name="email_penyewa">nagato@ulala.com</string>
    <string name="noPenyewa">081277738819</string>
    <string name="hubungi_kantor_sewa">Hubungi Kantor Sewa</string>
    <string name="batalkan_pesanan">Batalkan Pesanan</string>
</resources>