<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="17dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pesanan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pesanan_gojek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsextra"
            android:text="@string/senayan_park"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/pesanan"
            app:layout_constraintTop_toBottomOf="@+id/pesanan" />

        <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/sedang_diantar"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tvPesanan"
        app:layout_constraintTop_toBottomOf="@+id/tvPesanan" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/time"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/to"
            app:layout_constraintTop_toBottomOf="@+id/to" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/price"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvPesanan"
            app:layout_constraintTop_toBottomOf="@+id/pesanan" />

        <Button
            android:id="@+id/pesanLagi"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/pesan_lagi"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>