<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.DetailPesananActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPesanan"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titlePesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/detail_pesanan"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/backPesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/krem"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPesanan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDetailKonfirmasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/menunggu_konfirmasi"
                android:textColor="@color/green"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDetailPesanan"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgSewaMotor"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/zx25dummy" />

            <TextView
                android:id="@+id/tvSewaMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/kawasaki_zx250r"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/imgSewaMotor"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvStasiun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/stasiun_lempuyangan_yogyakarta"
                android:textColor="@color/dark_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imgSewaMotor"
                app:layout_constraintTop_toBottomOf="@+id/tvSewaMotor" />

            <ImageView
                android:id="@+id/checkCircle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/refund"
                app:layout_constraintStart_toEndOf="@+id/imgSewaMotor"
                app:layout_constraintTop_toBottomOf="@+id/tvStasiun" />

            <TextView
                android:id="@+id/refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/bisa_refund"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/checkCircle"
                app:layout_constraintTop_toBottomOf="@+id/tvStasiun" />

            <ImageView
                android:id="@+id/cancelCircle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/baseline_cancel_24"
                app:layout_constraintStart_toEndOf="@+id/imgSewaMotor"
                app:layout_constraintTop_toBottomOf="@+id/checkCircle" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/tidak_bisa_reschedule"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/cancelCircle"
                app:layout_constraintTop_toBottomOf="@+id/refund" />

            <TextView
                android:id="@+id/dataPenyewa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/data_penyewa"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgSewaMotor" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDataPenyewa"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                app:cardBackgroundColor="@color/abu"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataPenyewa">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/namaPenyewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/uzumaki_nagato"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/emailPenyewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/email_penyewa"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/namaPenyewa" />

                    <TextView
                        android:id="@+id/nomorPenyewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/noPenyewa"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.21"
                        app:layout_constraintStart_toEndOf="@+id/emailPenyewa"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.19999999" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPengambilan"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDetailPesanan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLokasiPengambilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/lokasi_pengambilan"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStasiunPengambilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/stasiun_lempuyangan_yogyakarta"
                android:textColor="@color/dark_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLokasiPengambilan" />

            <TextView
                android:id="@+id/tvLokasiPengembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/lokasi_pengembalian"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStasiunPengambilan" />

            <TextView
                android:id="@+id/tvStasiunPengembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/stasiun_lempuyangan_yogyakarta"
                android:textColor="@color/dark_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLokasiPengembalian" />

            <TextView
                android:id="@+id/tvDurasiSewa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/durasi_sewa"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStasiunPengembalian" />

            <TextView
                android:id="@+id/tvDurasiPengambilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/pengambilan"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDurasiSewa" />

            <TextView
                android:id="@+id/tvDurasiWaktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/timeSewa"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDurasiPengambilan" />

            <TextView
                android:id="@+id/tvDurasiPengembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/pengembalian"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/tvDurasiPengambilan"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.78" />

            <TextView
                android:id="@+id/tv_DurasiWaktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/timeSewa"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/tvDurasiWaktu"
                app:layout_constraintTop_toBottomOf="@+id/tvDurasiPengembalian" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnKonfirmasiPesanan"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/hubungi_kantor_sewa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPengambilan"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/btnBatalkan"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/batalkan_pesanan"
        android:textColor="@color/navi"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKonfirmasiPesanan" />

</androidx.constraintlayout.widget.ConstraintLayout>